# docs/swagger.yaml
@@ -1,12 +1,6 @@
 basePath: /
 definitions:
-  github_com_pborgen_future-api_internal_httputil.ErrorResponse:
-    properties:
-      error:
-        example: invalid trainer_id
-        type: string
-    type: object
-  internal_appointment.Appointment:
+  appointment.Appointment:
     properties:
       ends_at:
         example: "2026-04-06T09:30:00-07:00"
@@ -24,7 +18,7 @@ definitions:
         example: 2
         type: integer
     type: object
-  internal_appointment.CreateRequest:
+  appointment.CreateRequest:
     properties:
       ends_at:
         example: "2026-04-06T09:30:00-07:00"
@@ -39,13 +33,19 @@ definitions:
         example: 2
         type: integer
     type: object
-  internal_appointment.Slot:
+  appointment.Slot:
     properties:
       ends_at:
         example: "2026-04-06T09:30:00-07:00"
         type: string
       starts_at:
         example: "2026-04-06T09:00:00-07:00"
+        type: string
+    type: object
+  httputil.ErrorResponse:
+    properties:
+      error:
+        example: invalid trainer_id
         type: string
     type: object
 info:
@@ -68,30 +68,30 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_appointment.CreateRequest'
+          $ref: '#/definitions/appointment.CreateRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/internal_appointment.Appointment'
+            $ref: '#/definitions/appointment.Appointment'
         "400":
           description: malformed request
           schema:
-            $ref: '#/definitions/github_com_pborgen_future-api_internal_httputil.ErrorResponse'
+            $ref: '#/definitions/httputil.ErrorResponse'
         "409":
           description: trainer already booked at that time
           schema:
-            $ref: '#/definitions/github_com_pborgen_future-api_internal_httputil.ErrorResponse'
+            $ref: '#/definitions/httputil.ErrorResponse'
         "422":
           description: outside business hours, wrong duration, or not on :00/:30
           schema:
-            $ref: '#/definitions/github_com_pborgen_future-api_internal_httputil.ErrorResponse'
+            $ref: '#/definitions/httputil.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github_com_pborgen_future-api_internal_httputil.ErrorResponse'
+            $ref: '#/definitions/httputil.ErrorResponse'
       summary: Book a new appointment
       tags:
       - appointments
@@ -112,16 +112,16 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/internal_appointment.Appointment'
+              $ref: '#/definitions/appointment.Appointment'
             type: array
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/github_com_pborgen_future-api_internal_httputil.ErrorResponse'
+            $ref: '#/definitions/httputil.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github_com_pborgen_future-api_internal_httputil.ErrorResponse'
+            $ref: '#/definitions/httputil.ErrorResponse'
       summary: List a trainer's scheduled appointments
       tags:
       - appointments
@@ -155,16 +155,16 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/internal_appointment.Slot'
+              $ref: '#/definitions/appointment.Slot'
             type: array
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/github_com_pborgen_future-api_internal_httputil.ErrorResponse'
+            $ref: '#/definitions/httputil.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github_com_pborgen_future-api_internal_httputil.ErrorResponse'
+            $ref: '#/definitions/httputil.ErrorResponse'
       summary: List available appointment slots for a trainer
       tags:
       - appointments
